--- a/expertInfo.html
+++ b/expertInfo.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="expertInfo.css">
@@ -5,7 +8,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <title>Expert Info</title>
 </head>
-<body >
+<body style="background-color:#f1f1f1">
 
    <!--top most header-->
     <div class="topHeader container-fluid m-0 ">
@@ -87,7 +90,7 @@
    <!--expert basic info -->
    <div class="container-fluid row ">
        <div class="col-md-2 col-sm-0"></div>
-       <div class="col-md-8 bg-success">
+       <div class="col-md-8 bg-light  " style="border: 0.5px solid rgba(143,143,143,0.36)">
            <table class="table">
                <tr >
                    <td ><img    src="https://images.duckduckgo.com/iu/?u=https%3A%2F%2Fx1.xingassets.com%2Fassets%2Ffrontend_minified%2Fimg%2Fusers%2Fnobody_m.original.jpg&f=1"
@@ -110,7 +113,7 @@
    <!--address-->
    <div class="container-fluid my-1 row ">
         <div class="col-md-2 col-sm-0"></div>
-        <div class="col-md-8 bg-success">
+        <div class="col-md-8 bg-light">
             <table class="table">
                 <tr><th colspan="2">
                     <h2>Consulting place and address</h2>
@@ -141,14 +144,14 @@
                 </table>
             <hr>
             <div class="row pb-3">
-                    <div class="col-md-4">
+                    <div class="col-sm-4 col-xs-6">
                         <input type="submit" value="Book Consultation" class="my-1 btn btn-primary">
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-sm-4 col-xs-6">
                         <input type="submit" value="Book Appointment" class="my-1 btn btn-primary">
                     </div>
-                    <div class="col-md-4">
-                        <input type="submit" value="Book Consultation" class="my-1 btn btn-primary">
+                    <div class="col-sm-4 col-xs-6">
+                        <input type="submit" value="Give Feedback" class="my-1 btn btn-primary px-5">
                     </div>
                 </div>
         </div>
@@ -158,7 +161,7 @@
    <!-- feedback -->
    <div class="container-fluid my-1 row">
        <div class="col-md-2 col-sm-0"></div>
-       <div class="col-md-8  bg-success">
+       <div class="col-md-8  bg-light">
            <table class="table">
                <tr><th colspan="3"><h2>Feedback</h2></th></tr>
                <tr>
