--- a/searchExperts.html
+++ b/searchExperts.html
@@ -11,7 +11,7 @@
 
     <title>searchExperts</title>
 </head>
-<body class="mainBody">
+<body class="mainBody" style="background-color:#f1f1f1">
 <div class="container-fluid p-0" style="width: 100%">   <!--parent class-->
 
      <!--top most header-->
@@ -76,9 +76,11 @@
 
     <!-- Experts info cards-->
     <div class="container-fluid px-3">
-        <div class="container-fluid row my-5 mx-0 px-0  text-dark mb-5 ">
+        <div class="container-fluid row mt-5 mx-0 px-0  text-dark  ">
             <!-- FIRST CARD IN SAME ROW-->
-            <div class="col-md-6 col-xs-12 expertListView pt-3">
+            <div class="col-md-3 col-sm-0">
+            </div>
+           <!-- <div class="col-md-7 col-xs-12 expertListView pt-3">
                 <div class="row expertListViewRow">
                 <div class="col-md-7 col-xs-12 px-3 center " >
                     <div class="profilePic ">
@@ -90,16 +92,6 @@
                         11 years Experience<br>
                         Dermatologist,Skin Care,Dietician<br><br>
                         Manish Homeo Clinic</p>
-                    <ul class="workplacePics mb-0">
-                        <li><a href="#"><img src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fblog.mailchimp.com%2Fwp-content%2Fuploads%2F2008%2F05%2Fwordpress_logo.png&f=1"
-                        class="img thumbnail" alt="workplace"></a></li>
-                        <li><a href="#"><img src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fblog.mailchimp.com%2Fwp-content%2Fuploads%2F2008%2F05%2Fwordpress_logo.png&f=1"
-                        class="img thumbnail" alt="workplace"></a></li>
-                        <li><a href="#"><img src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fblog.mailchimp.com%2Fwp-content%2Fuploads%2F2008%2F05%2Fwordpress_logo.png&f=1"
-                        class="img thumbnail" alt="workplace"></a></li>
-                        <li><a href="#"><img src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fblog.mailchimp.com%2Fwp-content%2Fuploads%2F2008%2F05%2Fwordpress_logo.png&f=1"
-                        class="img thumbnail" alt="workplace"></a></li>
-                    </ul>
                     <p>MME ID:DR5123B<br>
                         <a href="#"> view profile</a>
                     </p>
@@ -119,57 +111,129 @@
                 <div class="col-md-1 col-xs-12 bg-light"></div>
                 </div>
 
-            </div>
-
-            <!-- SECOND CARD IN SAME ROW-->
-            <div class="col-md-6 col-xs-12 expertListView pt-3">
-                <div class="row expertListViewRow">
-                <div class="col-md-1 col-xs-12 bg-light"></div>
-                <div class="col-md-7 col-xs-12 px-3 center " >
-                    <div class="profilePic ">
-                        <img src="https://images.duckduckgo.com/iu/?u=https%3A%2F%2Fx1.xingassets.com%2Fassets%2Ffrontend_minified%2Fimg%2Fusers%2Fnobody_m.original.jpg&f=1"
-                         class="img-fluid mt-3" alt="profile_pic">
-                    </div>
-                    <p>Dr. Sanjeev Kumar<br>
+            </div>-->
+            <div class="col-md-7 ">
+                <table class="table bg-light" style="border: 0.5px solid gray">
+                <tr>
+                    <td>
+                       <img src="https://images.duckduckgo.com/iu/?u=https%3A%2F%2Fx1.xingassets.com%2Fassets%2Ffrontend_minified%2Fimg%2Fusers%2Fnobody_m.original.jpg&f=1"
+                         class="img-fluid mt-3" alt="profile_pic" height="90px" width="90px">
+                    </td>
+                    <td>
+                        <p>Dr. Sanjeev Kumar<br>
                         MBBS, MD-Dermatologist<br>
                         11 years Experience<br>
                         Dermatologist,Skin Care,Dietician<br><br>
                         Manish Homeo Clinic</p>
-                    <ul class="workplacePics mb-0">
-                        <li><a href="#"><img src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fblog.mailchimp.com%2Fwp-content%2Fuploads%2F2008%2F05%2Fwordpress_logo.png&f=1"
-                        class="img thumbnail" alt="workplace"></a></li>
-                        <li><a href="#"><img src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fblog.mailchimp.com%2Fwp-content%2Fuploads%2F2008%2F05%2Fwordpress_logo.png&f=1"
-                        class="img thumbnail" alt="workplace"></a></li>
-                        <li><a href="#"><img src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fblog.mailchimp.com%2Fwp-content%2Fuploads%2F2008%2F05%2Fwordpress_logo.png&f=1"
-                        class="img thumbnail" alt="workplace"></a></li>
-                        <li><a href="#"><img src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fblog.mailchimp.com%2Fwp-content%2Fuploads%2F2008%2F05%2Fwordpress_logo.png&f=1"
-                        class="img thumbnail" alt="workplace"></a></li>
-                    </ul>
-                    <p>MME ID:DR5123B<br>
-                        <a href="#"> view profile</a>
-                    </p>
-                </div>
-                <div class="col-md-4 col-xs-12 px-0 mt-3 right">
-                    <ul>
-                        <li><i class="material-icons">thumb_up</i> 98%(4000 votes)</li>
-                        <li><i class="material-icons">chat</i> <a href="#">229 feedback</a></li>
-                        <li><i class="material-icons">location_on</i> <a href="#">banglore</a></li>
-                        <li><i class="material-icons">euro_symbol</i> 150</li>
-                    </ul>
-                    <br><br>
-                    <button type="submit" class="btn btn-primary disabled btn-sm ">Book Appointment</button>
-                    <div  style="height:2px"></div>
-                    <button type="submit" class="btn btn-primary btn-sm ">Book Consultation</button>
-                </div>
+                        <p>MME ID:DR5123B<br>
+                            <a href="#"> view profile</a>
+                         </p>
+                    </td>
+                    <td>
+                            <i class="material-icons">thumb_up</i> 98%(4000 votes) <br>
+                           <i class="material-icons">chat</i> <a href="#">229 feedback</a><br>
+                            <i class="material-icons">location_on</i> <a href="#">banglore</a><br>
+                            <i class="material-icons">euro_symbol</i> 150<br><br>
 
-                </div>
-
+                            <button type="submit" class="btn btn-primary disabled btn-sm ">Book Appointment</button>
+                            <div  style="height:2px"></div>
+                            <button type="submit" class="btn btn-primary btn-sm ">Book Consultation</button>
+                    </td>
+                </tr>
+            </table>
             </div>
+            <div class="col-md-2 col-sm-0">
+
 
         </div>
 
+
+
+        </div>
+        <div class="container-fluid row mt-1 mx-0 px-0  text-dark  ">
+            <!-- FIRST CARD IN SAME ROW-->
+            <div class="col-md-3 col-sm-0">
+            </div>
+            <div class="col-md-7 ">
+                <table class="table bg-light" style="border: 0.5px solid gray">
+                <tr>
+                    <td>
+                       <img src="https://images.duckduckgo.com/iu/?u=https%3A%2F%2Fx1.xingassets.com%2Fassets%2Ffrontend_minified%2Fimg%2Fusers%2Fnobody_m.original.jpg&f=1"
+                         class="img-fluid mt-3" alt="profile_pic" height="90px" width="90px">
+                    </td>
+                    <td>
+                        <p>Dr. Sanjeev Kumar<br>
+                        MBBS, MD-Dermatologist<br>
+                        11 years Experience<br>
+                        Dermatologist,Skin Care,Dietician<br><br>
+                        Manish Homeo Clinic</p>
+                        <p>MME ID:DR5123B<br>
+                            <a href="#"> view profile</a>
+                         </p>
+                    </td>
+                    <td>
+                            <i class="material-icons">thumb_up</i> 98%(4000 votes) <br>
+                           <i class="material-icons">chat</i> <a href="#">229 feedback</a><br>
+                            <i class="material-icons">location_on</i> <a href="#">banglore</a><br>
+                            <i class="material-icons">euro_symbol</i> 150<br><br>
+
+                            <button type="submit" class="btn btn-primary disabled btn-sm ">Book Appointment</button>
+                            <div  style="height:2px"></div>
+                            <button type="submit" class="btn btn-primary btn-sm ">Book Consultation</button>
+                    </td>
+                </tr>
+            </table>
+            </div>
+            <div class="col-md-2 col-sm-0">
+
+
         </div>
 
+
+
+        </div>
+        <div class="container-fluid row mt-1 mx-0 px-0  text-dark  ">
+            <!-- FIRST CARD IN SAME ROW-->
+            <div class="col-md-3 col-xs-0">
+            </div>
+            <div class="col-md-7 col-xs-12">
+                <table class="table bg-light" style="border: 0.5px solid gray">
+                <tr>
+                    <td>
+                       <img src="https://images.duckduckgo.com/iu/?u=https%3A%2F%2Fx1.xingassets.com%2Fassets%2Ffrontend_minified%2Fimg%2Fusers%2Fnobody_m.original.jpg&f=1"
+                         class="img-fluid mt-3" alt="profile_pic" height="90px" width="90px">
+                    </td>
+                    <td>
+                        <p>Dr. Sanjeev Kumar<br>
+                        MBBS, MD-Dermatologist<br>
+                        11 years Experience<br>
+                        Dermatologist,Skin Care,Dietician<br><br>
+                        Manish Homeo Clinic</p>
+                        <p>MME ID:DR5123B<br>
+                            <a href="#"> view profile</a>
+                         </p>
+                    </td>
+                    <td>
+                            <i class="material-icons">thumb_up</i> 98%(4000 votes) <br>
+                           <i class="material-icons">chat</i> <a href="#">229 feedback</a><br>
+                            <i class="material-icons">location_on</i> <a href="#">banglore</a><br>
+                            <i class="material-icons">euro_symbol</i> 150<br><br>
+
+                            <button type="submit" class="btn btn-primary disabled btn-sm ">Book Appointment</button>
+                            <div  style="height:2px"></div>
+                            <button type="submit" class="btn btn-primary btn-sm ">Book Consultation</button>
+                    </td>
+                </tr>
+            </table>
+            </div>
+            <div class="col-md-2 col-xs-0">
+
+
+        </div>
+
+
+
+        </div>
     <!-- footer -->
     <div class="footer container-fluid bg-secondary pt-4 " id="footer">
         <div class="row">
